Remove IE flex and display CSS fixes & fallbacks (#6161)
* [EuiModal] Remove IE flex workaround/wrapper

* [EuiBadge] Remove unnecessary `flex` CSS

- truncation and display still appears to all work as before without issue

* [EuiListGroup] Remove unnecessary flex shrink/basis CSS

- flex-grow is still necessary for icons to be pushed to the right

* [EuiCard] Remove IE min-height workaround

- looks to have been missed in the Emotion conversion

* [EuiForm*] Remove IE CSS

* [Eui*Table] Remove IE mobile workaround

* [EuiPageContent] Remove IE fix

- likely not necessary to test as EuiPageContent is deprecated

* [EuiFlexItem] [SAFE] Remove unit from flex basis

* [EuiFlexGroup] [UNSAFE?] Remove flex-grow: 1??

- not sure if this causes unexpected issues :/

* Changelog

* [PR feedback] Restore flex-grow 1

--- a/src/components/flex/_flex_group.scss
+++ b/src/components/flex/_flex_group.scss
@@ -1,16 +1,11 @@
-/**
- * 1. Not always needed, but fixes an IE11 issue when flex-groups are nested under display: flex elements.
- * 2. IE requires a unit to grow.
- */
-
 .euiFlexGroup {
   display: flex;
   align-items: stretch;
-  flex-grow: 1; /* 1 */
+  flex-grow: 1; // Grow nested flex-groups by default
 
   .euiFlexItem {
     flex-grow: 1;
-    flex-basis: 0%; /* 2 */
+    flex-basis: 0;
   }
 }
 
